--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -5,32 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
+    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="shortcut icon" href="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <title>Государственная символика | Украина</title>
 
 </head>
 
 <body>
     <header>
-        <a href="/">Постсоветское пространоство</a>
-        <a href="#">Последние новости</a>
-        <a href="/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space">Последние новости</a>
+        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-            <a href="/country/azerbaijan/">Азербайджан</a>
-            <a href="/country/armenia/">Армения</a>
-            <a href="/country/belarus/">Беларусь</a>
-            <a href="/country/kazakhstan/">Казахстан</a>
-            <a href="/country/russia/">Российская Федерация</a>
-            <a href="/country/ukraine/" id="id">Украина</a>
-            <a href="/country/abkhazia/">Абхазия</a>
-            <a href="/country/south-ossetia/">Южная Осетия</a>
-            <a href="/country/dni/">ДНР</a>
-            <a href="/country/lnr/">ЛНР</a>
+            <a href="/political-na-postsovet-space/country/azerbaijan/">Азербайджан</a>
+            <a href="/political-na-postsovet-space/country/armenia/">Армения</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
+            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Украина</a>
+            <a href="/political-na-postsovet-space/country/abkhazia/">Абхазия</a>
+            <a href="/political-na-postsovet-space/country/south-ossetia/">Южная Осетия</a>
+            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="/country/ukraine/">Основная информация</a>
-            <a href="/country/ukraine/gos-simvolika/" id="id">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/" id="id">Государственная символика</a>
         </div>
     </header>
     <main>
@@ -40,7 +40,7 @@
         <p>
             Герб Украи́ны (укр. Герб України) — один из трёх официальных символов государства, наряду с флагом и
             гимном. Состоит из Малого и Большого гербов. В настоящее время используется в основном только Малый герб,
-            <img src="/country/ukraine/gerb-of-ukraine.png" alt="">
+            <img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="">
             утверждённый 19 февраля 1992 года.
         </p>
         <br>
@@ -61,7 +61,7 @@
             официальный государственный символ Украины (наряду с гербом и гимном), а также один из национальных
             символов украинцев.
             Представляет собой прямоугольное полотнище из двух <img
-                src="/country/ukraine/flag-of-ukraine.png"> равновеликих горизонтальных полос: верхней —
+                src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png"> равновеликих горизонтальных полос: верхней —
             синего и
             нижней — жёлтого цвета. Отношение ширины флага к его длине 2:3. Часто на практике оттенок синего может
             отличаться как в сторону голубого, так и в сторону тёмно-синего.
@@ -79,14 +79,14 @@
         </p>
         <br>
         <audio controls>
-            <source src="/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3" type="audio/mpeg">
+            <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3" type="audio/mpeg">
             Тег audio не поддерживается вашим браузером.
-            <a href="/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте музыку</a>.
+            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте музыку</a>.
         </audio>
     </main>
     <footer>
-        <a href="/contacts/">Поддержка</a>
-        <a href="/legal/">Правовая информация</a>
+        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
+        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
 
 </body>
