--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -13,20 +13,20 @@
 
 <body>
     <header>
-        <a href="/">Постсоветское пространоство</a>
-        <a href="#">Последние новости</a>
-        <a href="/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространоство</a>
+         <a href="/political-na-postsovet-space">Последние новости</a> 
+        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-            <a href="/country/azerbaijan/">Азербайджан</a>
-            <a href="/country/armenia/">Армения</a>
-            <a href="/country/belarus/">Беларусь</a>
-            <a href="/country/kazakhstan/">Казахстан</a>
-            <a href="/country/russia/">Российская Федерация</a>
-            <a href="/country/ukraine/" id="id">Украина</a>
-            <a href="/country/abkhazia/">Абхазия</a>
-            <a href="/country/south-ossetia/">Южная Осетия</a>
-            <a href="/country/dni/">ДНР</a>
-            <a href="/country/lnr/">ЛНР</a>
+            <a href="/political-na-postsovet-space/country/azerbaijan/">Азербайджан</a>
+            <a href="/political-na-postsovet-space/country/armenia/">Армения</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
+            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Украина</a>
+            <a href="/political-na-postsovet-space/country/abkhazia/">Абхазия</a>
+            <a href="/political-na-postsovet-space/country/south-ossetia/">Южная Осетия</a>
+            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
 
         </div>
         <div id="nav-country">
