--- a/contacts/index.html
+++ b/contacts/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/contacts/style.css">
-    <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
+    <link rel="stylesheet" href="/political-na-postsovet-space/contacts/style.css">
+    <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
     <title>Поддержка</title>
 
 </head>
 
 <body>
     <header>
-        <a href="/">Постсоветское пространоство</a>
-        <a href="#">Последние новости</a>
-        <a href="#">Правовая информация</a>
-        <a href="/country/">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space/">Последние новости</a>
+        <a href="/political-na-postsovet-space/country/">Страны</a>
     </header>
     <main>
         <div id="social">
@@ -40,7 +39,8 @@
         </div>
     </main>
     <footer>
-        <a href="/contacts/">Поддежка</a>
+        <a href="/political-na-postsovet-space/contacts/">Поддежка</a>
+        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
 
 </body>
