--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <header>
         <a href="/political-na-postsovet-space">Постсоветское пространоство</a>
         <a href="#">Последние новости</a>
-        <a href="/political-na-postsovet-space">Страны</a>
+        <a href="/political-na-postsovet-space/country/">Страны</a>
     </header>
     <main>
 
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi iste itaque aperiam aut dolorem earum
-            inventore distinctio <img src="soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
+            inventore distinctio <img src="/political-na-postsovet-space/soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
             officia nostrum sint
             suscipit
             optio nihil nobis! Quas est quidem fugiat.
