--- a/country/abkhazia/index.html
+++ b/country/abkhazia/index.html
@@ -5,35 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/serp.ico" image="/x-icon">
+    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
     <title>Абхазия</title>
 
 </head>
 
 <body>
     <header>
-        <a href="/">Постсоветское пространоство</a>
-        <a href="#">Последние новости</a>
-        <a href="/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space/">Последние новости</a>
+        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-            <a href="/country/azerbaijan/">Азербайджан</a>
-            <a href="/country/armenia/">Армения</a>
-            <a href="/country/belarus/">Беларусь</a>
-            <a href="/country/kazakhstan/">Казахстан</a>
-            <a href="/country/russia/">Российская Федерация</a>
-            <a href="/country/ukraine/">Украина</a>
-            <a href="/country/abkhazia/" id="id">Абхазия</a>
-            <a href="/country/south-ossetia/">Южная Осетия</a>
-            <a href="/country/dni/">ДНР</a>
-            <a href="/country/lnr/">ЛНР</a>
+            <a href="/political-na-postsovet-space/country/azerbaijan/">Азербайджан</a>
+            <a href="/political-na-postsovet-space/country/armenia/">Армения</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
+            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/abkhazia/" id="id">Абхазия</a>
+            <a href="/political-na-postsovet-space/country/south-ossetia/">Южная Осетия</a>
+            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
     </header>
     <main>
 
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi iste itaque aperiam aut dolorem earum
-            inventore distinctio <img src=".soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
+            inventore distinctio <img src="/political-na-postsovet-space/soviet_200.png"> necessitatibus possimus et laborum explicabo, nisi sed
             officia nostrum sint
             suscipit
             optio nihil nobis! Quas est quidem fugiat.
@@ -103,8 +103,8 @@
 
     </main>
     <footer>
-        <a href="/contacts/">Поддержка</a>
-        <a href="/legal/">Правовая информация</a>
+        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
+        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
 
 </body>
