--- a/contacts/index.html
+++ b/contacts/index.html
@@ -31,8 +31,8 @@
             <br>
             <br>
             <br>
-            <a href="https://vk.com/new_su_2020"><img src="/Vk.ico" alt="Вконтакте"></a>
-            <a href="https://t.me/ruzahardni"><img src="/telegram.ico"></a>
+            <a href="https://vk.com/new_su_2020"><img src="/political-na-postsovet-space/Vk.ico" alt="Вконтакте"></a>
+            <a href="https://t.me/ruzahardni"><img src="/political-na-postsovet-space/telegram.ico"></a>
             <br>
             <br>
             <br>
