--- a/contacts/index.html
+++ b/contacts/index.html
@@ -31,7 +31,7 @@
             <br>
             <br>
             <br>
-            <a href="https://vk.com/new_su_2020"><img src="/political-na-postsovet-space/Vk.ico" alt="Вконтакте"></a>
+            <a href="https://vk.com/club198438193"><img src="/political-na-postsovet-space/Vk.ico" alt="Вконтакте"></a>
             <a href="https://t.me/ruzahardni"><img src="/political-na-postsovet-space/telegram.ico"></a>
             <br>
             <br>
