--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="yandex-verification" content="b64609ce82e285b9" />
 
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="serp.ico" image="/x-icon">
