--- a/nasha/index.html
+++ b/nasha/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Казна России</title>
     <style>
         button {
             background-color: rgb(42, 96, 197);
