--- a/nasha/index.html
+++ b/nasha/index.html
@@ -56,7 +56,7 @@
                 ochk.textContent = ochki
             }
             else {
-                alert("Бля денег на ремонт нет!!!")
+                alert("Бля... Денег на ремонт нет!!!")
             }
         }
         function bon() {
