--- a/nasha/index.html
+++ b/nasha/index.html
@@ -26,7 +26,7 @@
 <body>
     <h1>Казна России</h1>
     <button onclick="go()" id="lol">Собрать деньги с народа</button>
-    <p>Очки: <span id="kom">0</span></p>
+    <p>Денег в казне: <span id="kom">0</span></p>
     <p>Цель: не просрать деньги</p>
     <hr>
     <button onclick="bon()">Произвести выплаты (2 000 000 000 рублей)</button>
