--- a/nasha/index.html
+++ b/nasha/index.html
@@ -56,7 +56,7 @@
                 ochk.textContent = ochki
             }
             else {
-                alert("Бля... Денег на ремонт нет!!!")
+                alert("Бля... Денег на ремонт нет!!! " + "<br>" + "Идите на хуй со своими дорогами!!!")
             }
         }
         function bon() {
@@ -68,7 +68,7 @@
                 ochk.textContent = ochki
             }
             else {
-                alert("Денег в казне нет!!!")
+                alert("Пиздец!!! Денег в казне нет!!!")
             }
         }
         function autoPlus() {
