--- a/nasha/index.html
+++ b/nasha/index.html
@@ -56,7 +56,7 @@
                 ochk.textContent = ochki
             }
             else {
-                alert("Бля... Денег на ремонт нет!!! " + "<br>" + "Идите на хуй со своими дорогами!!!")
+                alert("Бля... Денег на ремонт нет!!! " + "  " + "Идите на хуй со своими дорогами!!!")
             }
         }
         function bon() {
