--- a/nasha/index.html
+++ b/nasha/index.html
@@ -14,6 +14,14 @@
             color: white;
             border-radius: 10px;
         }
+        #lol{
+            background-color: red;
+            font-size: 1.3em;
+            width: 400px;
+            padding: 10px;
+            color: white;
+            border-radius: 10px;
+        }
 
         p {
             font-size: 1.5em;
