--- a/nasha/index.html
+++ b/nasha/index.html
@@ -33,8 +33,8 @@
 
 <body>
     <h1>Казна России</h1>
-    <button onclick="go()" id="lol">Собрать деньги с народа</button>
-    <p>Денег в казне: <span id="kom">0</span></p>
+    <button onclick="go()" id="lol">Собрать деньги с народа (нажимать в крайнем случае)</button>
+    <p>Денег в казне: <span id="kom">10000000</span></p>
     <p>Цель: не просрать деньги</p>
     <hr>
     <button onclick="bon()">Произвести выплаты (2 000 000 000 рублей)</button>
