Поменял рарешение кнопок

--- a/nasha/index.html
+++ b/nasha/index.html
@@ -9,7 +9,7 @@
         button {
             background-color: rgb(42, 96, 197);
             font-size: 1.3em;
-            width: 400px;
+            width: 100%;
             padding: 10px;
             color: white;
             border-radius: 10px;
@@ -17,7 +17,7 @@
         #lol{
             background-color: red;
             font-size: 1.3em;
-            width: 400px;
+            width: 100%;
             padding: 10px;
             color: white;
             border-radius: 10px;
