Добавил подвал сайта.

--- a/nasha/index.html
+++ b/nasha/index.html
@@ -51,7 +51,10 @@
     <button onclick="rubl()" id="green">Выпустить  рубль </button>
     <br><br>
     <button onclick="remont()">На ремонт дорог (150000000000000)</button>
-
+    <footer>
+          &copy; 2020. Данная игра является игровым
+          сюжетом. Совпадения с реальной жизнью случайны.
+    </footer>
     <script>
         let ochk = document.querySelector('#kom');
         let ochki = 10000000;
