Поменял кое что

--- a/nasha/index.html
+++ b/nasha/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Казна России</title>
     <style>
+        @media (min-width: 750px) {
+            html,body {
+                background-color: black;
+                color: white;
+            }
+        }
         button {
             background-color: rgb(42, 96, 197);
             font-size: 1.3em;
