Добавил виджет вк

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -35,7 +35,14 @@
             <a href="https://t.me/ruzahardni"><img src="/political-na-postsovet-space/telegram.ico"></a>
             <br>
             <br>
-            <br>
+            <br><script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+<!-- VK Widget -->
+<div id="vk_community_messages"></div>
+<script type="text/javascript">
+VK.Widgets.CommunityMessages("vk_community_messages", 198438193, {expanded: "1",tooltipButtonText: "Есть вопрос?"});
+</script>
+            
         </div>
     </main>
     <footer>
