--- a/nasha/index.html
+++ b/nasha/index.html
@@ -55,6 +55,7 @@
     <button onclick="rubl()" id="green">Выпустить  рубль </button>
     <br><br>
     <button onclick="remont()">На ремонт дорог (150000000000000)</button>
+    <a download="/political-na-postsovet-space"><button>скачать игру</button></a>
     <footer>
           &copy; 2020. Данная игра является игровым
           сюжетом. Совпадения с реальной жизнью случайны.
