--- a/test/index.html
+++ b/test/index.html
@@ -100,7 +100,7 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="Putin.jpg" class="d-block w-100" alt="...">
+                    <img src="Vladimir.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Владимир Владимирович Путин</h5>
                       <p>Президент Российской Федерации</p>
