--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -35,6 +35,9 @@
         </div>
     </header>
     <main>
+        <h1>Государственная символика Российской Федерации</h1>
+        <hr>
+        <br>
         <h2>Герб России</h2>
         <hr>
         <br>
