--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/gerb-of-Russia.png" image="/x-icon">
-    
+
     <title>Государственная символика | Российская Федерация</title>
 
 </head>
@@ -38,13 +38,25 @@
         <h1>Государственная символика Российской Федерации</h1>
         <hr>
         <br>
-        <h2>Герб России</h2>
+        <p>Государственные символы России — установленные федеральными конституционными законами особые отличительные
+            знаки
+            России, олицетворяющие её национальный суверенитет и самобытность, несущие определённый идеологический
+            смысл.
+            Таковыми символами являются: государственный флаг, герб и гимн.
+        </p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2>Государственный герб России</h2>
         <hr>
         <br>
         <p>
             Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
             углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
-            расправленные крылья. <img src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя малыми
+            расправленные крылья. <img
+                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя
+            малыми
             коронами и — над ними — одной большой короной, соединёнными
             лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный всадник
             в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого навзничь и попранного
@@ -57,7 +69,7 @@
         <br>
         <br>
 
-        <h2>Флаг России</h2>
+        <h2>Государственный флаг России</h2>
         <hr>
         <br>
         <p>
@@ -66,7 +78,8 @@
         </p>
         <p>
             Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней — белого,
-            средней — синего и нижней — красного цвета. <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png">
+            средней — синего и нижней — красного цвета. <img
+                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png">
             Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
             были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
             Федерации оттенки цветов не устанавливаеть.
@@ -94,7 +107,7 @@
         <br>
         <br>
         <br>
-        <h2>Гимн России</h2>
+        <h2>Государственный гимн России</h2>
         <hr>
         <br>
         <p>
@@ -145,9 +158,11 @@
         <br>
         <h3>Гимн России инструментал</h3>
         <audio controls loop>
-            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3" type="audio/mpeg">
+            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
+                type="audio/mpeg">
             Тег audio не поддерживается вашим браузером.
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте музыку</a>.
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте
+                музыку</a>.
         </audio>
         <br>
         <br>
