--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
     <main>
-        <h1>Государственная символика Российской Федерации</h1>
+        <h1>Государственные символы России</h1>
         <hr>
         <br>
         <p>Государственные символы России — установленные федеральными конституционными законами особые отличительные
