--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/russia/style.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/gerb-of-Russia.png" image="/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
+        integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 
     <title>Государственная символика | Российская Федерация</title>
 
@@ -35,149 +37,169 @@
         </div>
     </header>
     <main>
-        <h1>Государственные символы России</h1>
-        <hr>
-        <br>
-        <p>Государственные символы России — установленные федеральными конституционными законами особые отличительные
-            знаки
-            России, олицетворяющие её национальный суверенитет и самобытность, несущие определённый идеологический
-            смысл.
-            Таковыми символами являются: государственный флаг, герб и гимн.
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h2>Государственный герб России</h2>
-        <hr>
-        <br>
-        <p>
-            Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
-            углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
-            расправленные крылья. <img
-                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан двумя
-            малыми
-            коронами и — над ними — одной большой короной, соединёнными
-            лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный всадник
-            в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого навзничь и попранного
-            конём дракона.
-
-
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
-
-        <h2>Государственный флаг России</h2>
-        <hr>
-        <br>
-        <p>
-            Государственный флаг — это опознавательный знак государства, исполняет ту же функцию, что и государственный
-            герб, государственный гимн и название страны, — он обозначает свою страну, отличает её от других стран.
-        </p>
-        <p>
-            Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней — белого,
-            средней — синего и нижней — красного цвета. <img
-                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png">
-            Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
-            были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
-            Федерации оттенки цветов не устанавливаеть.
-
-
-
-        </p>
-        <br>
-        <br>
-        <h3>Использование флага России</h3>
-        <br>
-        <p>Порядок использования государственного флага определяется Федеральным законом. Законом описаны случаи, в
-            которых флаг должен использоваться обязательно: он помещается на зданиях, в которых располагаются органы
-            власти (Президент Российской Федерации, Федеральное Собрание, правительство, федеральные министерства и
-            ведомства и их отделения, органы власти субъектов Российской Федерации — республик, краев, областей,
-            автономных округов, органы местного самоуправления муниципальных образований — городов, районов и сельских
-            поселений), в рабочих кабинетах руководителей органов власти, на зданиях представительств России за рубежом,
-            на российских кораблях и судах. Российский флаг каждый день поднимается в воинских частях нашей армии. Флаг
-            изображается на воздушных судах (самолётах и вертолётах), российских космических аппаратах. В дни праздников
-            и важных событий государственный флаг украшает улицы и площади. Закон устанавливает случаи, когда и кем флаг
-            должен использоваться обязательно. Существуют три основных способа применения флагов: флаг может быть
-            поднят, вывешен (установлен) или растянут. Существует ещё немало тонкостей в правилах использования флагов,
-            общий свод которых называется флажным протоколом.
-        </p>
-        <br>
-        <br>
-        <br>
-        <h2>Государственный гимн России</h2>
-        <hr>
-        <br>
-        <p>
-            Государственный гимн Российской Федерации представляет собой песню, музыку к которой написал композитор А.
-            В. Александров, а слова — поэт С. В. Михалков. Сама музыка и основа текста были позаимствованы из гимна
-            Советского Союза.
-        </p>
-        <p>
-
-            Гимн имеет три куплета, после которых трижды исполняется припев. Гимн может звучать со словами или без слов
-            — оба исполнения являются равноценными. При исполнении гимна без слов обыкновенно звучат только первый
-            куплет и припев.
-        </p>
-        <br>
-
-        <h3>Текст гимна Российской Федерации</h3>
-        <i>
-            <p id="gimn">Россия — священная наша держава,</p>
-            <p id="gimn">Россия — любимая наша страна.</p>
-            <p id="gimn">Могучая воля, великая слава —</p>
-            <p id="gimn">Твоё достоянье на все времена!</p>
+        <div class="container">
+            <h1>Государственные символы России</h1>
+            <hr>
             <br>
-            <p id="gimn">Славься, Отечество наше свободное,</p>
-            <p id="gimn">Братских народов союз вековой,</p>
-            <p id="gimn">Предками данная мудрость народная!</p>
-            <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+            <p>Государственные символы России — установленные федеральными конституционными законами особые
+                отличительные
+                знаки
+                России, олицетворяющие её национальный суверенитет и самобытность, несущие определённый идеологический
+                смысл.
+                Таковыми символами являются: государственный флаг, герб и гимн.
+            </p>
             <br>
-            <p id="gimn">От южных морей до полярного края</p>
-            <p id="gimn">Раскинулись наши леса и поля.</p>
-            <p id="gimn">Одна ты на свете! Одна ты такая —</p>
-            <p id="gimn">Хранимая Богом родная земля!</p>
             <br>
-            <p id="gimn">Славься, Отечество наше свободное,</p>
-            <p id="gimn">Братских народов союз вековой,</p>
-            <p id="gimn">Предками данная мудрость народная!</p>
-            <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
             <br>
-            <p id="gimn">Широкий простор для мечты и для жизни</p>
-            <p id="gimn">Грядущие нам открывают года.</p>
-            <p id="gimn">Нам силу даёт наша верность Отчизне.</p>
-            <p id="gimn">Так было, так есть и так будет всегда!</p>
             <br>
-            <p id="gimn">Славься, Отечество наше свободное,</p>
-            <p id="gimn">Братских народов союз вековой,</p>
-            <p id="gimn">Предками данная мудрость народная!</p>
-            <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
-        </i>
-        <br>
-        <h3>Гимн России инструментал</h3>
-        <audio controls loop>
-            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
-                type="audio/mpeg">
-            Тег audio не поддерживается вашим браузером.
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте
-                музыку</a>.
-        </audio>
-        <br>
-        <br>
-        <h3>Гимн России хор</h3>
-        <audio controls>
-            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3" type="audio/mpeg">
-            Тег audio не поддерживается вашим браузером.
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте музыку</a>.
-        </audio>
+            <h2>Государственный герб России</h2>
+            <hr>
+            <br>
+            <p>
+                Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
+                углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
+                расправленные крылья. <img
+                    src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"> Орёл увенчан
+                двумя
+                малыми
+                коронами и — над ними — одной большой короной, соединёнными
+                лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный
+                всадник
+                в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого навзничь и
+                попранного
+                конём дракона.
+
+
+            </p>
+            <br>
+            <br>
+            <br>
+            <br>
+
+            <h2>Государственный флаг России</h2>
+            <hr>
+            <br>
+            <p>
+                Государственный флаг — это опознавательный знак государства, исполняет ту же функцию, что и
+                государственный
+                герб, государственный гимн и название страны, — он обозначает свою страну, отличает её от других стран.
+            </p>
+            <p>
+                Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней —
+                белого,
+                средней — синего и нижней — красного цвета. <img
+                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png">
+                Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
+                были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
+                Федерации оттенки цветов не устанавливаеть.
+
+
+
+            </p>
+            <br>
+            <br>
+            <h3>Использование флага России</h3>
+            <br>
+            <p>Порядок использования государственного флага определяется Федеральным законом. Законом описаны случаи, в
+                которых флаг должен использоваться обязательно: он помещается на зданиях, в которых располагаются органы
+                власти (Президент Российской Федерации, Федеральное Собрание, правительство, федеральные министерства и
+                ведомства и их отделения, органы власти субъектов Российской Федерации — республик, краев, областей,
+                автономных округов, органы местного самоуправления муниципальных образований — городов, районов и
+                сельских
+                поселений), в рабочих кабинетах руководителей органов власти, на зданиях представительств России за
+                рубежом,
+                на российских кораблях и судах. Российский флаг каждый день поднимается в воинских частях нашей армии.
+                Флаг
+                изображается на воздушных судах (самолётах и вертолётах), российских космических аппаратах. В дни
+                праздников
+                и важных событий государственный флаг украшает улицы и площади. Закон устанавливает случаи, когда и кем
+                флаг
+                должен использоваться обязательно. Существуют три основных способа применения флагов: флаг может быть
+                поднят, вывешен (установлен) или растянут. Существует ещё немало тонкостей в правилах использования
+                флагов,
+                общий свод которых называется флажным протоколом.
+            </p>
+            <br>
+            <br>
+            <br>
+            <h2>Государственный гимн России</h2>
+            <hr>
+            <br>
+            <p>
+                Государственный гимн Российской Федерации представляет собой песню, музыку к которой написал композитор
+                А.
+                В. Александров, а слова — поэт С. В. Михалков. Сама музыка и основа текста были позаимствованы из гимна
+                Советского Союза.
+            </p>
+            <p>
+
+                Гимн имеет три куплета, после которых трижды исполняется припев. Гимн может звучать со словами или без
+                слов
+                — оба исполнения являются равноценными. При исполнении гимна без слов обыкновенно звучат только первый
+                куплет и припев.
+            </p>
+            <br>
+
+            <h3>Текст гимна Российской Федерации</h3>
+            <i>
+                <p id="gimn">Россия — священная наша держава,</p>
+                <p id="gimn">Россия — любимая наша страна.</p>
+                <p id="gimn">Могучая воля, великая слава —</p>
+                <p id="gimn">Твоё достоянье на все времена!</p>
+                <br>
+                <p id="gimn">Славься, Отечество наше свободное,</p>
+                <p id="gimn">Братских народов союз вековой,</p>
+                <p id="gimn">Предками данная мудрость народная!</p>
+                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                <br>
+                <p id="gimn">От южных морей до полярного края</p>
+                <p id="gimn">Раскинулись наши леса и поля.</p>
+                <p id="gimn">Одна ты на свете! Одна ты такая —</p>
+                <p id="gimn">Хранимая Богом родная земля!</p>
+                <br>
+                <p id="gimn">Славься, Отечество наше свободное,</p>
+                <p id="gimn">Братских народов союз вековой,</p>
+                <p id="gimn">Предками данная мудрость народная!</p>
+                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                <br>
+                <p id="gimn">Широкий простор для мечты и для жизни</p>
+                <p id="gimn">Грядущие нам открывают года.</p>
+                <p id="gimn">Нам силу даёт наша верность Отчизне.</p>
+                <p id="gimn">Так было, так есть и так будет всегда!</p>
+                <br>
+                <p id="gimn">Славься, Отечество наше свободное,</p>
+                <p id="gimn">Братских народов союз вековой,</p>
+                <p id="gimn">Предками данная мудрость народная!</p>
+                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+            </i>
+            <br>
+            <h3>Гимн России инструментал</h3>
+            <audio controls loop>
+                <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
+                    type="audio/mpeg">
+                Тег audio не поддерживается вашим браузером.
+                <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте
+                    музыку</a>.
+            </audio>
+            <br>
+            <br>
+            <h3>Гимн России хор</h3>
+            <audio controls>
+                <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3"
+                    type="audio/mpeg">
+                Тег audio не поддерживается вашим браузером.
+                <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте
+                    музыку</a>.
+            </audio>
+        </div>
     </main>
     <footer>
         <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
         <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
-
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
+        integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
