--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/gos-simvolika/gerb-of-Russia.png" image="/x-icon">
     <title>Российская Федерация</title>
 
