--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -172,26 +172,25 @@
                 <p id="gimn">Предками данная мудрость народная!</p>
                 <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
             </i>
-            <br>
-            <h3>Гимн России инструментал</h3>
-            <audio controls loop>
-                <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
-                    type="audio/mpeg">
-                Тег audio не поддерживается вашим браузером.
-                <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте
-                    музыку</a>.
-            </audio>
-            <br>
-            <br>
-            <h3>Гимн России хор</h3>
-            <audio controls>
-                <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3"
-                    type="audio/mpeg">
-                Тег audio не поддерживается вашим браузером.
-                <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте
-                    музыку</a>.
-            </audio>
         </div>
+        <br>
+        <h3>Гимн России инструментал</h3>
+        <audio controls loop>
+            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
+                type="audio/mpeg">
+            Тег audio не поддерживается вашим браузером.
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте
+                музыку</a>.
+        </audio>
+        <br>
+        <br>
+        <h3>Гимн России хор</h3>
+        <audio controls>
+            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3" type="audio/mpeg">
+            Тег audio не поддерживается вашим браузером.
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте
+                музыку</a>.
+        </audio>
     </main>
     <footer>
         <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
