--- a/contacts/index.html
+++ b/contacts/index.html
@@ -32,7 +32,7 @@
             <br>
             <br>
             <a href="https://vk.com/club198438193"><img src="/political-na-postsovet-space/Vk.ico" alt="Вконтакте"></a>
-            <a href="https://t.me/ruzahardni"><img src="/political-na-postsovet-space/telegram.ico"></a>
+            <a href="https://t.me/ruzaharsovet"><img src="/political-na-postsovet-space/telegram.ico"></a>
             <br>
             <br>
             <br><script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
